# XERNative

./: .gitignore  CMakeLists.txt  Reader.cpp  Reader.h  Writer.cpp  Writer.h  main.cpp  package-lock.json  package.json  sample.xer
.github/workflows/: cmake.yml
Date/: Date.cpp  Date.h
__tests__/: wasm.ts
model/: Accounts.cpp  Accounts.h  Actvcodes.cpp  Actvcodes.h  Actvtypes.cpp  Actvtypes.h  Calendars.cpp  Calendars.h  CurrTypes.cpp  CurrTypes.h  Currtypes.cpp  Currtypes.h  Fintmpls.cpp  Fintmpls.h  NonWorks.cpp  NonWorks.h  Obss.cpp  Obss.h  Pcattypes.cpp  Pcattypes.h  Pcatvals.cpp  Pcatvals.h  Projects.cpp  Projects.h  Projpcats.cpp  Projpcats.h  RCatTypes.cpp  RCatTypes.h  RCatValues.cpp  RCatValues.h  RoleRates.cpp  RoleRates.h  Roles.cpp  Roles.h  Rsrccurvdatas.cpp  Rsrccurvdatas.h  Rsrcrates.cpp  Rsrcrates.h  Rsrcrcats.cpp  Rsrcrcats.h  (+26 more)
model/classes/: Account.cpp  Account.h  Actvcode.cpp  Actvcode.h  Actvtype.cpp  Actvtype.h  Calendar.cpp  Calendar.h  CurrType.cpp  CurrType.h  Currtype.cpp  Currtype.h  Fintmpl.cpp  Fintmpl.h  NonWork.cpp  NonWork.h  Obs.cpp  Obs.h  Pcattype.cpp  Pcattype.h  Pcatval.cpp  Pcatval.h  Project.cpp  Project.h  Projpcat.cpp  Projpcat.h  RCatType.cpp  RCatType.h  RCatValue.cpp  RCatValue.h  Role.cpp  Role.h  RoleRate.cpp  RoleRate.h  Rsrc.cpp  Rsrc.h  Rsrccurvdata.cpp  Rsrccurvdata.h  Rsrcrate.cpp  Rsrcrate.h  (+26 more)
pythonApi/: CMakeLists.txt  compile.txt  hassan.cpp  xernative_wrapper.cpp
source/: WasmModule.js  index.ts
test-app/: index.js  package-lock.json  package.json  wk2.xer
wasm/: CMakeLists.txt
wasm/source/: wasmGlue.cpp
